--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head>
   <title>Ma première page avec du style</title>
 </head>
+<style>
+  body{ 
+        background-color: powderblue;
+      }
+  h1{   
+      color: blue;
+      font-family: verdana;
+      font-size: 300%;
+    }
+  p{
+    color: red;
+    font-family: courier;
+    font-size: 160%;
+    }
 
+</style>
 <body>
 
 <!-- Menu de navigation du site -->
